; ModuleID = '/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4xdr.c_compoundargs_bytes_left.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4xdr.c_compoundargs_bytes_left.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfsd4_compoundargs = type { i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nfsd4_compoundargs*)* @compoundargs_bytes_left to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compoundargs_bytes_left(%struct.nfsd4_compoundargs* %0) #0 {
  %2 = alloca %struct.nfsd4_compoundargs*, align 8
  %3 = alloca i32, align 4
  store %struct.nfsd4_compoundargs* %0, %struct.nfsd4_compoundargs** %2, align 8
  %4 = load %struct.nfsd4_compoundargs*, %struct.nfsd4_compoundargs** %2, align 8
  %5 = getelementptr inbounds %struct.nfsd4_compoundargs, %struct.nfsd4_compoundargs* %4, i32 0, i32 2
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to i8*
  %8 = load %struct.nfsd4_compoundargs*, %struct.nfsd4_compoundargs** %2, align 8
  %9 = getelementptr inbounds %struct.nfsd4_compoundargs, %struct.nfsd4_compoundargs* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to i8*
  %12 = ptrtoint i8* %7 to i64
  %13 = ptrtoint i8* %11 to i64
  %14 = sub i64 %12, %13
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = load %struct.nfsd4_compoundargs*, %struct.nfsd4_compoundargs** %2, align 8
  %18 = getelementptr inbounds %struct.nfsd4_compoundargs, %struct.nfsd4_compoundargs* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = add i32 %16, %19
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
